--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!--
-   Angular 2 Bare Bones
+   Angular/TypeScript Bare Bones Sample
    Dan Wahlin
 
    @DanWahlin
@@ -13,7 +13,7 @@
     <title>Angular 2 Bare Bones Projet</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Angular 2 Bare Bones Starter">
+    <meta name="description" content="Angular Bare Bones Starter">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
     <link href="styles/styles.css" rel="stylesheet" />
@@ -37,7 +37,7 @@
     <header class="navbar navbar-inner navbar-fixed-top">
         <nav class="container">
             <div class="navbar-header">
-              <span class="app-title">Angular 2 Bare Bones Starter</span>
+              <span class="app-title">Angular Bare Bones Starter</span>
             </div>
         </nav>
     </header>
