--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,9 @@
     </header>
 
     <main class="container">
-        <app-container>
+        <app-component>
             Loading...
-        </app-container>
+        </app-component>
         <br /><br />
     </main>
 
